# nectar

./: .gitignore  CMakeLists.txt  README.md
data/: default_regexes
resources/: AppWindow.ui  LoginPage.ui  MainPage.ui  NowPlaying.ui  PrefsBar.ui  QuickUpdateTile.ui  com.plejeck.nectar.gresource.xml  style.css
src/: Backend.vala  config.vala.in  nectar.model.animeseries.vala  nectar.model.user.vala  nectar.util.filecache.vala  nectar.util.logger.vala  nectar.vala  nectar.widget.appwindow.vala  nectar.widget.image.vala  nectar.widget.loginpage.vala  nectar.widget.mainpage.vala  nectar.widget.nowplaying.vala  nectar.widget.prefsbar.vala  nectar.widget.prefsmenu.vala  nectar.widget.webimage.vala
src/Backends/: Hummingbird.vala
src/Controllers/: LoginPage.vala
src/Models/: AnimeList.vala  AnimeStatus.vala
src/Util/: Logger.vala  Settings.vala
src/Widgets/: AppWindow.vala  Image.vala  LoginPage.vala  MainPage.vala  NowPlaying.vala  PrefsBar.vala
